<resources>
    <string name="app_name">pokket.cash</string>
    <string name="lang">en</string>
    <string name="bitcoin_address">Bitcoin Address</string>
    <string name="fingerprint_description">confirm fingerprint</string>
    <string name="fingerprint_hint">touch sensor</string>
    <string name="fingerprint_not_recognized">fingerprint not recognized. Try again.</string>
    <string name="fingerprint_success">fingerprint recognized</string>
    <string name="fragmentdecoder_not_valid_bitcoin_address">not a valid bitcoin address</string>
    <string name="fragmentdecoder_not_a_bitcoin_qr_code">not a bitcoin QR code</string>
    <string name="error">error</string>
    <string name="invalid_address">invalid address</string>
    <string name="invalid_address_with_holder">invalid address\n%1$s</string>
    <string name="fingerprint_auth">fingerprint authorization</string>
    <string name="rooted_message">On a \'rooted\' device, any app can access any other app\'s keystore data (and steal your bitcoins).%s</string>
    <string name="rooted_message_holder1">\nWipe this wallet immediately and restore on a secure device.</string>
    <string name="auth_required">Authentication required</string>
    <string name="auth_message">The phone has been unlocked for too long</string>
    <string name="camera_configuration_failed">camera configuration failed</string>
    <string name="device_security_compromised">DEVICE SECURITY COMPROMISED</string>
    <string name="confirm">confirm</string>
    <string name="keystore_unavailable">The KeyStore is temporary unavailable, please try again later</string>
    <string name="encryption_needed_for_wallet">A device screen lock is needed to safeguard your wallet. Go to \"Settings\" > \"Security\" > \"Screen lock\" and enable to continue.</string>
    <string name="failed_to_sign_tx">Failed to sign transaction</string>
    <string name="payment_request_message_too_large">PaymentRequest message is too large</string>
    <string name="expired_request">Expired request</string>
    <string name="invalid_request">Invalid request</string>
    <string name="allow_camera_access">allow camera access in \"Settings\" > \"Apps\" > \"breadwallet\" > \"Permissions\"</string>
    <string name="insecure_keyboard_message">Custom keyboards are insecure and cannot be used to enter a recovery phrase. Press continue to select a Google keyboard.</string>
    <string name="choose_an_email_client">Choose an Email client</string>
    <string name="phrase_error">Recovery phrase error, please contact support at breadwallet.com</string>
    <string name="recover_button">recover</string>
    <string name="fingerprint_spend_limit">fingerprint spend limit</string>
    <string name="refresh">refresh</string>
    <string name="breadwallet_v">breadwallet %1$d</string>
    <string name="copyright_u00a9_2020_pokkst">copyright © 2021 pokkst</string>
    <string name="app_support">app support:</string>
    <string name="support_website">pokkst@mail2tor.com</string>
    <string name="exchange_rate_data_provided_by">exchange rate data provided by</string>
    <string name="bitpay_com_rates">cryptowat.ch</string>
    <string name="unknown_host">unknown host</string>
    <string name="connection_timed_out">connection timed out</string>
    <string name="bad_recovery_phrase">bad recovery phrase</string>
    <string name="settingsall_rescan_instructions">rescan blockchain if you think you may have missing transactions, or are having trouble sending (rescanning can take several minutes)</string>
    <string name="wipewallet_instructions">enter this wallet\'s recovery phrase to wipe it and start/recover another. your current balance remains on this phrase.</string>
    <string name="dialog_recovery_phrase_warning">if you ever lose your phone, you will need this phrase to recover your wallet</string>
    <string name="toast_qr_tip">Let others scan this QR code to get your bitcoin address. Anyone can send bitcoins to your wallet by transferring them to your address.</string>
    <string name="toast_address_tip">This is your bitcoin address. Tap to copy it or send it by email or sms. The address will change each time you receive funds, but old addresses always work.</string>
    <string name="warning">WARNING</string>
    <string name="warning_text1">\nDO NOT let anyone see your recovery\nphrase or they can spend your bitcoins.\n</string>
    <string name="warning_text2">\nNEVER type your recovery phrase into\npassword managers or any software.</string>
    <string name="show">show</string>
    <string name="cancel">cancel</string>
    <string name="mainfragment_clipboard_invalid_data">"clipboard doesn't contain a valid bitcoin address"</string>
    <string name="ok">ok</string>
    <string name="toast_address_copied">copied</string>
    <string name="middle_view_tip_first">This is your bitcoin balance. Bitcoin is a currency. The exchange rate changes with the market.</string>
    <string name="middle_view_tip_second">%1$s is for \'bits\'. %2$s = 1 bitcoin.</string>
    <string name="done">done</string>
    <string name="remind_me_later">remind me later</string>
    <string name="enter_old_passcode">enter old passcode</string>
    <string name="choose_new_passcode">choose wallet passcode</string>
    <string name="verify_passcode">verify passcode</string>
    <string name="to">to: </string>
    <string name="middle_view_settings">settings</string>
    <string name="middle_view_transaction_details">transaction details</string>
    <string name="bad_payment_request">bad payment request</string>
    <string name="more">more...</string>
    <string name="sent">sent</string>
    <string name="sent_exclaimed">sent!</string>
    <string name="received">received</string>
    <string name="received_amount">received %1$s (%2$s)</string>
    <string name="wallet_address">wallet address</string>
    <string name="op_return_address">null data</string>
    <string name="payment_address">payment address</string>
    <string name="spent_address">spent address</string>
    <string name="bitcoin_network_fee">bitcoin network fee</string>
    <string name="pay_address_from_clipboard">pay address from clipboard</string>
    <string name="could_not_transmit_payment">couldn\'t transmit payment to bitcoin network</string>
    <string name="scan_qr_code">scan QR code</string>
    <string name="request_an_amount">request an amount</string>
    <string name="send_address_as_email">send address as email</string>
    <string name="send_address_as_message">send address as message</string>
    <string name="copy_address_to_clipboard">copy address to clipboard</string>
    <string name="enter_passcode">passcode for %s</string>
    <string name="address_already_in_your_wallet">this payment address is already in your wallet</string>
    <string name="syncing">syncing…</string>
    <string name="synced">synced</string>
    <string name="payment_failed">couldn\'t make payment</string>
    <string name="address_already_used">\nADDRESS ALREADY USED\n\nbitcoin addresses are intended for single use only\n\nre-use reduces privacy for both you and the recipient and can result in loss if the recipient doesn\'t directly control the address</string>
    <string name="ignore">ignore</string>
    <string name="verified_waiting">verified, waiting for confirmation</string>
    <string name="you_received_bitcoin">you received bitcoin!</string>
    <string name="write_down_phrase_holder1">next, write down your recovery phrase</string>
    <string name="write_down_phrase_holder2">WRITE DOWN YOUR RECOVERY PHRASE</string>
    <string name="write_down_phrase">\n%s\n\nif you ever lose your phone, you will need it to recover your wallet</string>
    <string name="unverified">unverified</string>
    <string name="important">IMPORTANT</string>
    <string name="moved">moved</string>
    <string name="receive_money">receive money:</string>
    <string name="send_money">send money:</string>
    <string name="new_wallet">new wallet</string>
    <string name="recover_wallet">recover wallet</string>
    <string name="wipe">wipe</string>
    <string name="generate_recovery_phrase">generate recovery phrase</string>
    <string name="request">request</string>
    <string name="pay">pay</string>
    <string name="at_this_address">receive bitcoins at this address: %s</string>
    <string name="generate_phrase_text1">start a new wallet by generating a wallet recovery phrase</string>
    <string name="generate_phrase_text2">if you ever lose your phone, you will need this phrase to recover your wallet</string>
    <string name="i_wrote_it_down">I wrote it down:</string>
    <string name="no_transactions">no transactions</string>
    <string name="recovery_phrase">enter recovery phrase</string>
    <string name="recovery_phrase_extension">enter bip39 passphrase (optional)</string>
    <string name="use_passcode">passcode</string>
    <string name="try_again">try again in %1$d %2$s</string>
    <string name="wallet_disabled">wallet disabled</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="reset">reset</string>
    <string name="recovery_phrase_label">recovery phrase</string>
    <string name="phrase_no_match">recovery phrase doesn\'t match</string>
    <string name="please_write_it_down">please write it down</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="local_currency">local currency</string>
    <string name="change_passcode">change passcode</string>
    <string name="start_recover_another_wallet">start/recover another wallet</string>
    <string name="transaction_history">transaction history</string>
    <string name="import_private_key">import private key</string>
    <string name="rescan_blockchain">rescan blockchain</string>
    <string name="confirm_">confirm:</string>
    <string name="id">id:</string>
    <string name="status">status:</string>
    <string name="amount">amount:</string>
    <string name="from">from:</string>
    <string name="copy">copy</string>
    <string name="not_connected">not connected</string>
    <string name="password_protected_key">password protected key</string>
    <string name="bitcoin_payment_cant_be_less">bitcoin payments can\'t be less than %s</string>
    <string name="amount_too_small">amount too small</string>
    <string name="change_payment_amount">change payment amount?</string>
    <string name="nr_confirmations">%d confirmations</string>
    <string name="nr_confirmations0">0 confirmations</string>
    <string name="nr_confirmations1">1 confirmation</string>
    <string name="confirmed_in_block_nr">confirmed in block #%d</string>
    <string name="change">change</string>
    <string name="attempts_remaining">\n%d attempts remaining\n</string>
    <string name="attempt_remaining1">\n1 attempt remaining\n</string>
    <string name="priv_key_empty">this private key is empty</string>
    <string name="could_not_sweep_the_balance">couldn\'t sweep balance</string>
    <string name="send_money_from_privkey_message">Send %1$s (%2$s) from this private key into your wallet? The bitcoin network will receive a fee of %3$s (%4$s).</string>
    <string name="continue_button">continue</string>
    <string name="next">next</string>
    <string name="donate">donate</string>
    <string name="create_multisig_wallet">create multisig wallet</string>
    <string name="payload_instructions">give this payload to the next cosigner</string>
    <string name="close">close</string>
    <string name="you_are_creating_a_m_of_n_multisig_wallet">you are creating a %1$d-of-%2$d multisig wallet</string>
    <string name="share_payload">share payload</string>
    <string name="multisig_instructions">please enter the type of multisig wallet you are creating, this must match for all other users</string>
    <string name="multisig_key_instructions">please enter the other user watching keys here:</string>
</resources>