<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/send_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/main_text_receive_money"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_money"
            android:textSize="@dimen/text_size"
            android:layout_marginBottom="40dp" />
        <Button
            android:id="@+id/scan_qr_code_button"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:drawableLeft="@drawable/cameraguide_blue_small"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:shadowColor="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/scan_qr_code"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:elevation="8dp"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/paste_address_button"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_button"
            android:shadowColor="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/pay_address_from_clipboard"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:elevation="8dp"
            android:textSize="16sp"/>

        <!--<Button
            android:id="@+id/view_tokens_button"
            android:layout_width="240dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_button"
            android:shadowColor="@android:color/transparent"
            android:stateListAnimator="@null"
            android:text="@string/view_tokens"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:elevation="8dp"
            android:textSize="16sp"/>-->
    </LinearLayout>

    <Button
        android:id="@+id/donate_button"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_button"
        android:shadowColor="@android:color/transparent"
        android:stateListAnimator="@null"
        android:text="@string/donate"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:elevation="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>