<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ui.main.fragment.NewWalletFragment">

    <include
        layout="@layout/fragment_intro_bg"/>

    <include
        android:id="@+id/seed_warning_screen"
        android:visibility="invisible"
        layout="@layout/intro_fragment_warning"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/intro_new_wallet_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/generate_phrase_text1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intro_new_wallet_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro_new_wallet_text1"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/generate_phrase_text2"
                android:textAlignment="center"
                android:stateListAnimator="@null"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/intro_new_wallet_generate"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro_new_wallet_text2"
                android:stateListAnimator="@null"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_white"
                android:text="@string/generate_recovery_phrase"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="30dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/intro_new_wallet_generate"
                android:layout_centerHorizontal="true">
                <CheckBox
                    android:id="@+id/multsig_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_multisig_wallet"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>