<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ui.main.fragment.RestoreWalletFragment">
    <include
        layout="@layout/fragment_intro_bg"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/recover_wallet_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/recovery_phrase"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/recover_wallet_edit_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/recover_wallet_text1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white_trans"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword|textMultiLine"
            android:lines="5"
            android:padding="20dp"
            android:scrollHorizontally="false"
            android:textColor="@color/wallet_green"
            android:textColorHint="@color/wallet_green"
            android:textSize="22sp" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/recover_wallet_edit_text"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:text="@string/continue_button"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/continue_button"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/light_gray"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>