<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.setup.NewWalletFragment">

    <include
        layout="@layout/fragment_intro_bg_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textFlow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/multisig_instructions"
            android:textColor="@color/dark_grey"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/m_of_n_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFlow2"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/m_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="20dp"
                android:inputType="number"
                android:hint="2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_grey"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/m_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="of"
                android:textColor="@color/dark_grey"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/n_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="20dp"
                android:inputType="number"
                android:hint="3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_grey"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/m_of_n_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/m_of_n_layout"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/you_are_creating_a_m_of_n_multisig_wallet"
            android:textColor="@color/dark_grey"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/keys_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/m_of_n_textview"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/multisig_key_instructions"
            android:textColor="@color/dark_grey"
            android:textSize="17sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/keys_label"
            android:layout_centerVertical="true">
            <LinearLayout
                android:id="@+id/cosigner_keys_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/clickable_layout"
                android:clickable="false"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:background="@drawable/round_button"
            android:elevation="4dp"
            android:text="@string/next"
            android:stateListAnimator="@null"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/navigationback" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>